@@ -672,3 +672,4 @@
 - v.5.8.7 (2025-XX-YY)
     - メモリリーク・ハンドルリークを削減。
     - メインアイコンを改良。
+    - アイコン／カーソル／ビットマップ／リソース追加のUI/UXを改良。
